--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">VLibrasMobile</string>
-    <string name="title_activity_main">VLibrasMobile</string>
-    <string name="package_name">lavid.ufpb.vlibras.mobile</string>
-    <string name="custom_url_scheme">lavid.ufpb.vlibras.mobile</string>
+    <string name="app_name">VLibras</string>
+    <string name="title_activity_main">VLibras</string>
+    <string name="package_name">com.lavid.vlibrasdroid</string>
+    <string name="custom_url_scheme">com.lavid.vlibrasdroid</string>
 </resources>
